# meepo

./: Cargo.toml  README.md  README.org
adaptor/: Cargo.toml
application/: Cargo.toml
application/src/: app.rs  app_router.rs  app_state.rs  common.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  server.rs  service.rs  tracing.rs
application/src/common/: config.rs  db.rs  error.rs  model.rs  tracing.rs
application/src/db/: postgres.rs  questdb.rs
application/src/domains/: auth.rs
application/src/domains/auth/domain/: entity.rs  reposiory.rs
application/src/domains/auth/model/: userinfo.rs
application/src/service/: contracts.rs
cloud-api/: Cargo.toml
cloud-ui/: Cargo.toml
edge-api/: Cargo.toml
edge-api/src/: main.rs
edge-api/src/domains/: hello.rs
edge-api/src/domains/hello/: service.rs
edge-api/src/domains/hello/api/: handlers.rs  routes.rs
edge-ui/: Cargo.toml
gateway/: Cargo.toml
resource/design/: M-Overall-Archi.drawio
rule-engine/: Cargo.toml
