[workspace]
resolver = "3"
members = [
    "adaptor",
    "application",
    "cloud-api",
    "cloud-ui",
    "edge-api",
    "edge-ui",
    "gateway",
    "rule-engine"
]

[workspace.package]
license = "MIT"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
application = { version = "0.1.0", path = "application"}

tokio = {version = "1.46", features = ["full"]}
tokio-util = "0.7"

axum = "0.8"
axum-server = {version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.10", features = ["typed-header"] }

tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

sea-orm = {version = "1.1", features =["sqlx-postgres", "runtime-tokio-rustls", "macros"]}

serde = "1.0"
serde_json = "1.0"
toml = "0.9"

anyhow = "1.0"
thiserror = "2.0"

time = { version = "0.3", features = ["serde"] }

clap = {version = "4.5", features = ["derive"]}
config = "0.15"
dotenvy = "0.15"

utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "std",
    "fmt",
    "time"
] }
tracing-opentelemetry = { version = "0.31"}

opentelemetry = "0.30"
opentelemetry_sdk = "0.30"
opentelemetry-otlp = { version = "0.30", features = ["http-proto"] }
opentelemetry-appender-tracing = { version = "0.30" }

once_cell = "1.21"
