[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
mimalloc.workspace = true

tokio.workspace = true
tokio-util.workspace = true

tower.workspace = true
tower-http.workspace = true

axum.workspace = true
axum-extra.workspace = true
axum-server.workspace = true

utoipa.workspace = true
utoipa-swagger-ui.workspace = true

clap.workspace = true
base64.workspace = true
reqwest.workspace = true

dotenvy.workspace = true
config.workspace = true

tracing.workspace = true
tracing-log.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true

questdb-rs.workspace = true
sea-orm.workspace = true

serde.workspace = true
serde_json.workspace = true
toml.workspace = true
bincode.workspace = true

anyhow.workspace = true
thiserror.workspace = true

time.workspace = true


[features]
default = ["monolith"]
monolith = []
microservice = []
